# ridgeplot

./: .bumpversion.cfg  .coveragerc  .editorconfig  .gitignore  .mdformat.toml  .pre-commit-config.yaml  .readthedocs.yaml  CHANGES.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  DOCS.md  LICENSE  MANIFEST.in  Makefile  README.md  mypy.ini  pyproject.toml  pyrightconfig.json  pytest.ini  ruff.toml  setup.cfg  setup.py  tox.ini
.github/: CODEOWNERS  FUNDING.yml  GOVERNANCE.md  PULL_REQUEST_TEMPLATE.md  SUPPORT.md  actionlint.yml  dependabot.yml
.github/ISSUE_TEMPLATE/: bug-report.yml  config.yml  feature-request.yml
.github/actions/setup-python/: action.yaml  action.yml
.github/workflows/: README.md  check-release-notes.yaml  check-release-notes.yml  check_release_notes.yaml  ci.yaml  ci.yml  codeql-analysis.yml  codeql.yml  greet-new-users.yaml  greet-new-users.yml  publish-pypi.yaml  publish_pypi.yaml  readthedocs-preview.yml  release.yaml  release.yml  upgrade-deps.yaml
ci_utils/: README.md  _compile_plotly_charts.py
cicd_utils/: README.md  find-unmentioned-prs.sh
cicd_utils/ci_pkg/: compile_plotly_charts.py
cicd_utils/cicd/: compile_plotly_charts.py  generate_internal_api_rst.py  test_helpers.py
cicd_utils/cicd/ridgeplot_examples/: _lincoln_weather.py  _lincoln_weather_red_blue.py
cicd_utils/cicd/scripts/: extract_latest_release_notes.py  generate_internal_api_rst.py
cicd_utils/ridgeplot_examples/: __init__.py  _base.py  _basic.py  _basic_hist.py  _lincoln_weather.py  _lincoln_weather_red_blue.py  _probly.py
cicd_utils/scripts/: extract_latest_release_notes.py
docs/: Makefile  compile_plotly_charts.py  conf.py  getting_started.md  index.md  installation.md  requirements.txt  robots.txt  sg_execution_times.rst
docs/_examples/: basic.py  lincoln_weather.py  probly.py
docs/_static/charts/: basic.html  basic_hist.html  lincoln_weather.html  lincoln_weather_red_blue.html  plotly.min.js  probly.html
docs/_static/css/: misc_overrides.css  overrides.css  sphinx_gallery_overwrite.css  versionmodified_admonitions.css
docs/_templates/: base.html
docs/api/: index.rst
docs/api/internal/: color.rst  colormodes.rst  colors.rst  figure_factory.rst  hist.rst  kde.rst  missing.rst  obj.rst  testing.rst  types.rst  utils.rst
docs/api/public/: ridgeplot.datasets.load_lincoln_weather.rst  ridgeplot.datasets.load_probly.rst  (+3 more)
docs/contributing/: index.md
docs/development/: contributing.md  release_process.md
docs/examples_gallery_in/: README.rst  plot_probly.py
docs/examples_gallery_out/: index.rst  plot_probly.codeobj.json  plot_probly.ipynb  plot_probly.py  plot_probly.py.md5  plot_probly.rst  plot_probly_codeobj.pickle  sg_execution_times.rst
docs/getting_started/: getting_started.md  installation.md
docs/reference/: alternatives.md  api.md  api.rst  changelog.md
docs/source/: conf.py  index.rst  test.md
examples/: lincoln_weather.py  probly.py  readme_probly.py  readme_simple.py
extras/: README.md  _compile_plotly_charts.py  _test_helpers.py
extras/_ridgeplot_examples/: __init__.py  _basic.py  _lincoln_weather.py
misc/: _violin.py  lincoln-weather.py  logo.ipynb  plotly_violin.py
misc/brand/: logo.ipynb
requirements/: README.md  cd.in  cd.txt  ci.in  ci.txt  cicd_utils.txt  dependency-management.310-darwin.txt  dependency-management.310-linux.txt  dependency-management.37-darwin.txt  dependency-management.37-linux.txt  dependency-management.38-darwin.txt  dependency-management.38-linux.txt  dependency-management.39-darwin.txt  dependency-management.39-linux.txt  dependency-management.in  dependency-management.txt  docs.310-darwin.txt  docs.310-linux.txt  docs.310-win32.txt  docs.37-darwin.txt  docs.37-linux.txt  docs.37-win32.txt  docs.38-darwin.txt  docs.38-linux.txt  docs.38-win32.txt  docs.39-darwin.txt  docs.39-linux.txt  docs.39-win32.txt  docs.in  docs.txt  jupyter.in  jupyter.txt  linting.in  linting.txt  local-dev.310-darwin.txt  local-dev.310-linux.txt  local-dev.310-win32.txt  local-dev.37-darwin.txt  local-dev.37-linux.txt  local-dev.37-win32.txt  (+50 more)
requirements/locked/: docs.310-darwin.txt  docs.310-linux.txt  docs.310-win32.txt  docs.311-darwin.txt  docs.311-linux.txt  docs.311-win32.txt  docs.37-darwin.txt  docs.37-linux.txt  docs.37-win32.txt  docs.38-darwin.txt  docs.38-linux.txt  docs.38-win32.txt  docs.39-darwin.txt  docs.39-linux.txt  docs.39-win32.txt  local-dev.310-darwin.txt  local-dev.310-linux.txt  local-dev.310-win32.txt  local-dev.311-darwin.txt  local-dev.311-linux.txt  local-dev.311-win32.txt  local-dev.37-darwin.txt  local-dev.37-linux.txt  local-dev.37-win32.txt  local-dev.38-darwin.txt  local-dev.38-linux.txt  local-dev.38-win32.txt  local-dev.39-darwin.txt  local-dev.39-linux.txt  local-dev.39-win32.txt  mypy.310-darwin.txt  mypy.310-linux.txt  mypy.310-win32.txt  mypy.311-darwin.txt  mypy.311-linux.txt  mypy.311-win32.txt  mypy.37-darwin.txt  mypy.37-linux.txt  mypy.37-win32.txt  mypy.38-darwin.txt  (+69 more)
ridgeplot/: __init__.py  _all_colors_dict.py  _colors.py  _figure_factory.py  _kde.py  _ridgeplot.py  _utils.py  colors.json  exceptions.py
scripts/: compile_plotly_charts.py  extract_latest_release_notes.py  open_in_browser.py  tox  update_colors_json.py  upgrade_and_lock_requirements.py
src/_ridgeplot_examples/: __init__.py
src/ridgeplot/: __init__.py  _colormodes.py  _colors.py  _css_colors.py  _figure_factory.py  _hist.py  _kde.py  _missing.c  _missing.py  _missing.pyi  _missing.pyx  _ridgeplot.py  _testing.py  _types.py  _utils.py  _version.py  colors.json  exceptions.py
tests/: conftest.py  test_ridgeplot.py
tests/cicd_utils/: test_compile_plotly_charts.py  test_ridgeplot_examples.py  test_test_helpers.py
tests/e2e/: test_examples.py
tests/extras/: test_compile_plotly_charts.py  test_test_helpers.py
tests/integration/: test_examples.py
tests/unit/: conftest.py  test_colormodes.py  test_colors.py  test_datasets.py  test_figure_factory.py  test_functional.py  test_hist.py  test_init.py  test_kde.py  test_missing.py  test_ridgeplot.py  test_types.py  test_utils.py  test_version.py
(+42 files in other folders)
