[build-system]
requires = ["setuptools"]
build-backend = "setuptools.build_meta"

[project]
name = "ridgeplot"
description = "Beautiful ridgeline plots in python"
version = "0.1.25"
authors = [
    { name = "Tomas Pereira de Vasconcelos" }
]
maintainers = [
    { name = "Tomas Pereira de Vasconcelos", email = "tomasvasconcelos1@gmail.com" }
]
readme = "README.md"
license = { file = "LICENSE" }
classifiers = [
    # https://pypi.org/classifiers/
    "Development Status :: 2 - Pre-Alpha",
    "Intended Audience :: Developers",
    "Intended Audience :: Science/Research",
    "License :: OSI Approved :: MIT License",
    "Natural Language :: English",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: Implementation :: CPython",
    "Topic :: Software Development",
    "Topic :: Scientific/Engineering",
    "Topic :: Scientific/Engineering :: Information Analysis",
    "Topic :: Scientific/Engineering :: Visualization",
    "Typing :: Typed",
]
keywords = [
    "ridgeline", "ridgeplot", "joyplot", "ggridges", "ridges", "ridge", "plot", "plotting", "distplot", "plotly", "data-visualization"
]
requires-python = ">=3.8"
dependencies = [
    "numpy>=1",
    "plotly>=4",
    "statsmodels>=0.12",
    'typing-extensions; python_version<"3.10"',
    'importlib-resources; python_version<"3.10"',
]

[project.urls]
Homepage = "https://github.com/tpvasconcelos/ridgeplot"
Documentation = "https://ridgeplot.readthedocs.io/en/stable/"
"Source code" = "https://github.com/tpvasconcelos/ridgeplot"
"Issue Tracker" = "https://github.com/tpvasconcelos/ridgeplot/issues"
Changelog = "https://ridgeplot.readthedocs.io/en/stable/reference/changelog.html"

# TODO: Update config based on:
#       https://setuptools.pypa.io/en/latest/userguide/datafiles.html#subdirectory-for-data-files
#[tool.setuptools.package-data]
#"ridgeplot.datasets.data" = ["*.csv"]

[tool.setuptools.packages.find]
where = ["src"]
namespaces = false

[tool.black]
line-length = 100
include = '\.pyi?$'
