[metadata]
name = ridgeplot
version = 0.1.14
description = Beautiful ridgeline plots in python
long_description = file: README.md
long_description_content_type = text/markdown
url = https://github.com/tpvasconcelos/ridgeplot
author = Tomas Pereira de Vasconcelos
author_email = tomasvasconcelos1@gmail.com
license = MIT
license_file = LICENSE
classifiers =
    Development Status :: 2 - Pre-Alpha
    Intended Audience :: Developers
    License :: OSI Approved :: MIT License
    Natural Language :: English
    Programming Language :: Python :: 3.7
    Programming Language :: Python :: 3.8
    Programming Language :: Python :: 3.9
    Programming Language :: Python :: Implementation :: CPython
    Topic :: Software Development
    Typing :: Typed
keywords = ridgeline, ridgeplot, joyplot, ggridges, ridges, ridge, plot, plotting, distplot, plotly
project_urls =
    Documentation = https://github.com/tpvasconcelos/ridgeplot
    Source = https://github.com/tpvasconcelos/ridgeplot
    Tracker = https://github.com/tpvasconcelos/ridgeplot/issues

[options]
packages = find:
install_requires =
    numpy>=1
    plotly>=4
    statsmodels>=0.12
python_requires = >=3.7,<4
include_package_data = True

[options.extras_require]
linting =
    pre-commit==2.13.0
tests =
    pytest==6.2.4
    pytest-cov==2.12.1
docs =
    sphinx==4.1.2
    sphinx-material==0.0.34
    myst-parser==0.15.2
    numpydoc==1.1.0
    nbsphinx==0.8.7
ci =
    tox==3.23.1
cd =
    bumpversion==0.6.0
dev =
    %(linting)s
    %(tests)s
    %(docs)s
    %(ci)s
    %(cd)s
    ipython==7.24.1
notebook =
    ipykernel==5.5.5
    jupyterlab==3.0.16
release =
    twine==3.4.1
    markdown-it-py==1.1.0
    mdformat==0.7.9
all =
    %(dev)s
    %(notebook)s
    %(release)s

[flake8]
exclude =
    docs
    .venv
    build
    *.pyi
    .git
    build
    .tox
max-line-length = 120
ignore =
    E722
    E203
    W503

[isort]
known_first_party = ridgeplot
src_paths = ridgeplot,tests
combine_as_imports = true
profile = black
