[metadata]
name = ridgeplot
version = 0.1.14
description = Beautiful ridgeline plots in python
long_description = file: README.md
long_description_content_type = text/markdown
url = https://github.com/tpvasconcelos/ridgeplot
author = Tomas Pereira de Vasconcelos
author_email = tomasvasconcelos1@gmail.com
license = MIT
license_file = LICENSE
classifiers =
    Development Status :: 2 - Pre-Alpha
    Intended Audience :: Developers
    License :: OSI Approved :: MIT License
    Natural Language :: English
    Programming Language :: Python :: 3.7
    Programming Language :: Python :: 3.8
    Programming Language :: Python :: 3.9
    Programming Language :: Python :: Implementation :: CPython
    Topic :: Software Development
    Typing :: Typed
keywords = ridgeline, ridgeplot, joyplot, ggridges, ridges, ridge, plot, plotting, distplot, plotly
project_urls =
    Documentation = https://ridgeplot.readthedocs.io/en/stable/
    Source = https://github.com/tpvasconcelos/ridgeplot
    Tracker = https://github.com/tpvasconcelos/ridgeplot/issues

[options]
packages = find:
package_dir =
    =src
install_requires =
    numpy>=1
    plotly>=4
    statsmodels>=0.12
python_requires = >=3.7,<4
include_package_data = True

[options.packages.find]
where = src

[flake8]
exclude =
    docs
    .venv
    build
    *.pyi
    .git
    build
    .tox
max-line-length = 120
ignore =
    W503

[isort]
known_first_party = ridgeplot
src_paths = ridgeplot,tests
combine_as_imports = true
profile = black
