[metadata]
name = ridgeplot
version = 0.1.21
description = Beautiful ridgeline plots in python
long_description = file: README.md
long_description_content_type = text/markdown
url = https://github.com/tpvasconcelos/ridgeplot
author = Tomas Pereira de Vasconcelos
author_email = tomasvasconcelos1@gmail.com
license = MIT
classifiers =
    Development Status :: 2 - Pre-Alpha
    Intended Audience :: Developers
    License :: OSI Approved :: MIT License
    Natural Language :: English
    Programming Language :: Python :: 3.7
    Programming Language :: Python :: 3.8
    Programming Language :: Python :: 3.9
    Programming Language :: Python :: 3.10
    Programming Language :: Python :: 3.11
    Programming Language :: Python :: Implementation :: CPython
    Topic :: Software Development
    Typing :: Typed
keywords = ridgeline, ridgeplot, joyplot, ggridges, ridges, ridge, plot, plotting, distplot, plotly
project_urls =
    Documentation = https://ridgeplot.readthedocs.io/en/stable/
    Source = https://github.com/tpvasconcelos/ridgeplot
    Tracker = https://github.com/tpvasconcelos/ridgeplot/issues

[options]
packages = find:
package_dir =
    = src
include_package_data = True
python_requires = >=3.7,<4
install_requires =
    numpy>=1
    plotly>=4
    statsmodels>=0.12

[options.packages.find]
where = src

[flake8]
exclude =
    docs
    .venv
    build
    *.pyi
    .git
    build
    .tox
max-line-length = 100
ignore =
    W503
    # --- flake8-rst-docstrings ---
    # Undefined substitution referenced
    RST305
    # --- flake8-docstrings ---
    # Missing docstring in public module
    D100
    # Missing docstring in public method
    D102
    # Missing docstring in public function
    D103
    # Missing docstring in public package
    D104
    # Missing docstring in magic method
    D105
    # 1 blank line required between summary line and description
    D205
    # Multi-line docstring closing quotes should be on a separate line
    D209
    # First line should end with a period
    D400
    # First line should be in imperative mood; try rephrasing
    D401
rst-roles =
    class
    exc
    func
    meth
    data
rst-directives =
    collapse
docstring-convention=numpy

[isort]
known_first_party = ridgeplot
src_paths = ridgeplot,tests
combine_as_imports = true
profile = black
